в модуле user_app добавил rest client products-from-user-cart который взаимодейтсвует с comments-and-shoping-cart-service

--- a/user_app/src/main/resources/application.yaml
+++ b/user_app/src/main/resources/application.yaml
@@ -4,6 +4,9 @@ market:
     products:
       uri: http://localhost:8081
       registrationId: keycloak
+    products-from-cart:
+      uri: http://localhost:8084
+      registrationId: keycloak
 spring:
   security:
     oauth2:
