начал внедрять возможность добавлять фотографии и видео к товару

--- a/products-service/src/main/resources/application.yaml
+++ b/products-service/src/main/resources/application.yaml
@@ -21,3 +21,6 @@ keycloak:
     uri:
       buyers: http://localhost:8082/realms/online-market-buyers
       sellers: http://localhost:8082/realms/online-market-sellers
+media:
+  storage:
+    location: C:\Users\никита\Desktop\Online_Market_Pet_Project\products-service\uploads
