реализовал скидки, фото в отзывах

--- a/comments-and-shopping-cart-service/src/main/resources/application.yaml
+++ b/comments-and-shopping-cart-service/src/main/resources/application.yaml
@@ -9,4 +9,11 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8082/realms/online-market-buyers
-
+keycloak:
+  realms:
+    uri:
+      buyers: http://localhost:8082/realms/online-market-buyers
+      sellers: http://localhost:8082/realms/online-market-sellers
+media:
+  storage:
+    location: C:\Users\никита\Desktop\Online_Market_Pet_Project\comments-and-shopping-cart-service\src\main\resources\static\uploads
