начал реализовывать заказы, также изменил структуру сущности product, добавил сущность seller в product-service

--- a/user_app/src/main/resources/application.yaml
+++ b/user_app/src/main/resources/application.yaml
@@ -7,6 +7,9 @@ market:
     products-from-cart:
       uri: http://localhost:8084
       registrationId: keycloak
+    orders-and-notification:
+      uri: http://localhost:8087
+      registrationId: keycloak
 spring:
   security:
     oauth2:
